data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_825.wast
;; 6. **Test for Stack Polymorphism:**    - **Description**: A `br` in different stack conditions including before and after consuming operands to exercise stack-polymorphism behavior.    - **Constraint Checked**: Verifying `br` as stack-polymorphic.    - **Relation to CFG**: Ensures `br` maintains CFG validity across various stack configurations.

(assert_invalid
  (module
    (func $test-stack-polymorphism
      (block
        (i32.const 0)
        (br 0) 
        (i32.const 1)
      )
    )
  )
  "stack-polymorphism condition not met"
)